--- a/views/patientProfile.ejs
+++ b/views/patientProfile.ejs
@@ -61,9 +61,9 @@
             <a href="/patient/favorites">View Favorites</a> 
             <a href="/patient/dashboard">Chat Box</a>
 
-            <a href="/">Home</a>
+            <a href="/patient/patient-index">Home</a>
             <a href="/patient/calendar">View Calender</a> 
-            
+            <a href="/patient/prescriptions">View Prescripitons</a>
             <form action="/auth/logout" method="POST" style="display: inline;">
                 <button type="submit">Logout</button>
             </form>
