--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,8 +44,12 @@
         <div class="auth-container">
 
                 <a href="/auth/login">Login</a>
-                <a href="/auth/signup">Signup</a>
-        </div>
+                <div class="mt-3">
+                  <a href="/auth/signup/patient">Patient Sign Up</a>
+              </div>
+              <div class="mt-3">
+                  <a href="/auth/signup/doctor">Doctor Sign Up</a>
+              </div>        </div>
 
         <div class="filter-container">
             <form action="/patient/doctors" method="get">
