Updated Admin View

--- a/views/admin-index.ejs
+++ b/views/admin-index.ejs
@@ -97,6 +97,7 @@
                 <a href="/auth/signup">Signup</a>
             <% } %>
             <a href="/admin/Dashboard">View Profile</a>
+            <a href="/auth/logout">Logout</a>
         </div>
 
         <div class="blogs-container">
@@ -114,7 +115,9 @@
                 <% }) %>
             </ul>
             <button onclick="window.location.href='/admin/blogs-all'">View All Blogs</button>
+            
         </div>
+
 
         
     </div>
