--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -43,7 +43,7 @@
 
   <a href="/admin/blogs">View Admin Blogs</a>
   <a href="/admin/blog">Upload Admin Blog</a>
-  <a href="/admin-home">Home</a>
+  <a href="/admin/admin-home">Home</a>
 
   <a href="/admin/subscriptions">Doctor Subscription Verification Requests</a>
   <a href="/auth/logout">Logout</a>
