Updated Patitent Signup flow

--- a/views/signup_doctor.ejs
+++ b/views/signup_doctor.ejs
@@ -76,7 +76,7 @@
   </a>
   
   <br>
-  <a href="/signup/patient">Patient Signup</a>
+  <a href="/auth/signup/patient">Patient Signup</a>
   <br><br>
   <a href="/auth/login">Login</a>
 </body>
