--- a/views/patientChat.ejs
+++ b/views/patientChat.ejs
@@ -31,37 +31,30 @@
             overflow-y: scroll;
             margin-bottom: 10px;
         }
-        .messages {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
+        .message-container {
+            display: flex;
+            justify-content: flex-start;
+            margin-bottom: 10px;
         }
-        .patient-message {
+        .message {
+            padding: 8px 12px;
+            border-radius: 8px;
+            max-width: 70%;
+            word-wrap: break-word;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            margin-left: 0;
+            margin-right: auto; 
             background-color: #e6f2ff; 
-            padding: 8px 12px;
-            border-radius: 8px;
-            margin-bottom: 10px;
-            max-width: 70%;
-            word-wrap: break-word;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-            align-self: flex-end; 
         }
-        .doctor-message {
+        .sent-message {
             background-color: #f2f2f2; 
-            padding: 8px 12px;
-            border-radius: 8px;
-            margin-bottom: 10px;
-            max-width: 70%;
-            word-wrap: break-word;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-            align-self: flex-start; 
+            margin-left: auto; 
+            margin-right: 0; 
         }
         .timestamp {
             font-size: 12px;
             color: #666;
             margin-left: 10px;
-            display: block;
-            text-align: right; 
         }
         #messageForm {
             display: flex;
@@ -91,16 +84,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Patient Chat</h1>
-        <div class="chat-box">
-            <ul class="messages">
-                <% chat.messages.forEach(message => { %>
-                    <li class="<%= message.senderId.toString() === chat.patientId.toString() ? 'patient-message' : 'doctor-message' %>">
+        <h1>Patient Chat Interface</h1>
+        <div class="chat-box" id="chatBox">
+            <% chat.messages.forEach(message => { %>
+                <div class="message-container">
+                    <div class="message <%= message.senderId.toString() === chat.patientId.toString() ? 'sent-message' : '' %> <%= !message.read ? 'unread-message' : '' %>">
                         <%= message.text %>
                         <span class="timestamp"><%= new Date(message.timestamp).toLocaleString() %></span>
-                    </li>
-                <% }); %>
-            </ul>
+                    </div>
+                </div>
+            <% }) %>
         </div>
         <form id="messageForm" action="/patient/chats/<%= chat._id %>/send-message" method="POST">
             <input type="text" name="message" placeholder="Type your message here..." required>
