--- a/views/patientDashboard.ejs
+++ b/views/patientDashboard.ejs
@@ -14,14 +14,16 @@
                 <h3>Chat with <%= chat.doctorId.name %></h3>
                 <% if (chat.messages.length > 0) { %>
                     <p>Last Message: <%= chat.messages[chat.messages.length - 1].text %></p>
-                    <p>Timestamp: <%= chat.messages[chat.messages.length - 1].timestamp %></p>
+                    <p>Timestamp: <%= new Date(chat.messages[chat.messages.length - 1].timestamp).toLocaleString() %></p>
                 <% } else { %>
                     <p>No messages yet</p>
+                <% } %>
+                <% if (chat.unreadCount > 0) { %>
+                    <p><strong><%= chat.unreadCount %> new message<%= chat.unreadCount > 1 ? 's' : '' %></strong></p>
                 <% } %>
                 <a href="/patient/chat/<%= chat._id %>">Chat with <%= chat.doctorId.name %></a>
             </li>
         <% }) %>
     </ul>
-
 </body>
 </html>
