Added the Notification Feature

--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -184,6 +184,7 @@
     <% } %>
 
     <a href="/doctor/calendar" class="btn">View Calendar</a>
+    <a href="/doctor/notifications" class="btn">Notifications</a>
     <form action="/auth/logout" method="GET">
     <button type="submit">Logout</button>
     </form>
