--- a/views/patientProfile.ejs
+++ b/views/patientProfile.ejs
@@ -63,6 +63,7 @@
 
             <a href="/patient/patient-index">Home</a>
             <a href="/patient/calendar">View Calender</a> 
+            <a href="/patient/notifications" class="btn">Notifications</a>
             <a href="/patient/prescriptions">View Prescripitons</a>
             <form action="/auth/logout" method="POST" style="display: inline;">
                 <button type="submit">Logout</button>
